syntax = "proto3";

import "entities/cadence.proto";

// https://docs.onflow.org/fcl/reference/api/#transaction-statuses
enum ExecutionStatusCode {
  EXECUTION_STATUS_UNKNOWN = 0;
  /**
   * Transaction Pending - Awaiting Finalization
   */
  EXECUTION_STATUS_PENDING = 1;
  /**
   * Transaction Finalized - Awaiting Execution
   */
  EXECUTION_STATUS_FINALIZED = 2;
  /**
   * Transaction Executed - Awaiting Sealing
   */
  EXECUTION_STATUS_EXECUTED = 3;
  /**
   * Transaction Sealed - Transaction Complete. At this point the transaction
   * result has been committed to the blockchain.
   */
  EXECUTION_STATUS_SEALED = 4;
  /**
   * Transaction Expired
   */
  EXECUTION_STATUS_EXPIRED = 5;
}

// https://github.com/onflow/flow-go/issues/4494#issuecomment-1601995168
enum GrcpStatusCode {
  GRCP_STATUS_OK = 0;
  GRCP_STATUS_FAILED = 1;
}

message Transaction {
  string id = 1;
  string script = 2;
  string block_id = 14;
  string reference_block_id = 3;
  uint32 gas_limit = 4;
  string payer = 5;
  TransactionProposalKey proposal_key = 6;
  TransactionStatus status = 7;
  repeated CadenceObject args = 8;
  repeated string authorizers = 9;
  repeated SignableObject envelope_signatures = 10;
  repeated SignableObject payload_signatures = 11;
  string created_at = 12;
  string updated_at = 13;
}

message TransactionProposalKey {
  string address = 1;
  int32 key_id = 2;
  int32 sequence_number = 3;
}

message SignableObject {
  string address = 1;
  int32 key_id = 2;
  string signature = 3;
}

message TransactionStatus {
  ExecutionStatusCode execution_status = 1;
  GrcpStatusCode grcp_status = 2;
  string error_message = 3;
}
